--- a/Forecast.bib
+++ b/Forecast.bib
@@ -2,6 +2,32 @@
 % This is compiled from a lot of other bib files
 % Encoding: Cp1252
 
+@article{Brandt_Williams_2001, 
+  title={A Linear Poisson Autoregressive Model: The Poisson AR(p) Model}, 
+  volume={9}, 
+  DOI={10.1093/oxfordjournals.pan.a004869}, 
+  number={2}, 
+  journal={Political Analysis}, 
+  author={Brandt, Patrick T. and Williams, John T.}, 
+  year={2001}, 
+  pages={164–184}
+} 
+
+@article{BWFP2000,
+ ISSN = {00925853, 15405907},
+ URL = {http://www.jstor.org/stable/2669284},
+ abstract = {We present a method for estimating event-count models when the data is generated from a persistent time-series process. A Kalman filter is used to estimate a Poisson exponentially weighted moving average (PEWMA) model. The model is compared to extant methods (Poisson regression, negative binomial regression, and ARIMA models). Using Monte Carlo experiments, we demonstrate that the PEWMA provides significant improvements in efficiency. As an example, we present an analysis of Pollins (1996) models of long cycles in international relations.},
+ author = {Patrick T. Brandt and John T. Williams and Benjamin O. Fordham and Brain Pollins},
+ journal = {American Journal of Political Science},
+ number = {4},
+ pages = {823--843},
+ publisher = {[Midwest Political Science Association, Wiley]},
+ title = {Dynamic Modeling for Persistent Event-Count Time Series},
+ urldate = {2025-05-23},
+ volume = {44},
+ year = {2000}
+}
+
 @article{Hegreetal2025,
 author = {Håvard Hegre and Paola Vesco and Michael Colaresi and Jonas Vestby and Alexa Timlick and Noorain Syed Kazmi and Angelica Lindqvist-McGowan and Friederike Becker and Marco Binetti and Tobias Bodentien and Tobias Bohne and Patrick T. Brandt and Thomas Chadefaux and Simon Drauz and Christoph Dworschak and Vito D’Orazio and Hannah Frank and Cornelius Fritz and Kristian Skrede Gleditsch and Sonja Häffner and Martin Hofer and Finn L Klebe and Luca Macis and Alexandra Malaga and Marius Mehrl and Nils W Metternich and Daniel Mittermaier and David Muchlinski and Hannes Mueller and Christian Oswald and Paola Pisano and David Randahl and Christopher Rauh and Lotta Rüter and Thomas Schincariol and Benjamin Seimon and Elena Siletti and Marco Tagliapietra and Chandler Thornhill and Johan Vegelius and Julian Walterskirchen},
 title ={The 2023/24 VIEWS Prediction challenge: Predicting the number of fatalities in armed conflict, with uncertainty},
